# Toon

./: .gitignore  CMakeLists.txt  README.md
asset/shaders/: test.glsl
configs/: ToonEditor.ini
source/: CMakeLists.txt  engine.cpp  main.cpp
source/_generated/reflection/: all_reflection.h  axis_aligned.reflection.gen.h  color.reflection.gen.h  matrix4.reflection.gen.h  meta_example.reflection.gen.h  quaternion.reflection.gen.h  transform.reflection.gen.h  vector2.reflection.gen.h  vector3.reflection.gen.h  vector4.reflection.gen.h
source/_generated/serializer/: all_serializer.h  all_serializer.ipp  axis_aligned.serializer.gen.h  color.serializer.gen.h  matrix4.serializer.gen.h  meta_example.serializer.gen.h  quaternion.serializer.gen.h  transform.serializer.gen.h  vector2.serializer.gen.h  vector3.serializer.gen.h  vector4.serializer.gen.h
source/core/base/: error.h  macro.h
source/core/color/: color.h
source/core/glad/: glad.c
source/core/log/: log_system.cpp  log_system.h
source/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
source/core/serializer/: json.h  serializer.cpp  serializer.h
source/core/timer/: timer.h
source/editor/: CMakeLists.txt  editor.cpp  editor.h  editor_ui.cpp  editor_ui.h  main.cpp
source/function/global/: global_context.cpp
source/function/input/: input_system.cpp  input_system.h
source/function/render/: render_imgui.cpp  render_imgui.h  render_system.cpp  render_system.h  window_system.cpp  window_system.h
source/function/render/debugdraw/: debug_draw_manager.cpp  debug_draw_primitive.cpp  debug_draw_primitive.h
source/function/render/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_shader.cpp  opengl_shader.h  opengl_vertex_array.cpp  opengl_vertex_array.h
source/function/ui/: window_ui.cpp
source/meta_parser/: CMakeLists.txt
source/meta_parser/parser/language_types/: class.cpp  field.cpp
source/precompile/: precompile.cmake  precompile.json.in
source/resource/: asset_manager.cpp  asset_manager.h  config_manager.cpp
source/runtime/: CMakeLists.txt  engine.cpp  engine.h
source/runtime/core/base/: error.h  macro.h  uuid.h
source/runtime/core/color/: color.h
source/runtime/core/glad/: glad.h
source/runtime/core/log/: log_system.cpp  log_system.h
source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
source/runtime/core/meta/: meta_example.cpp  meta_example.h
source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
source/runtime/function/framework/component/: component.h
source/runtime/function/framework/component/mesh/: mesh_component.cpp  mesh_component.h
source/runtime/function/framework/component/transform/: transform_component.cpp  transform_component.h
source/runtime/function/framework/level/: level.cpp  level.h  level_debugger.cpp  level_debugger.h
source/runtime/function/framework/object/: object.cpp  object.h  object_id_allocator.cpp  object_id_allocator.h
source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
source/runtime/function/global/: global_context.cpp  global_context.h
source/runtime/function/input/: input_system.cpp  input_system.h
source/runtime/function/render/: light.h  render_camera.cpp  render_camera.h  render_common.h  render_debug_config.h  render_entity.h  render_guid_allocator.h  render_helper.cpp  render_helper.h  render_object.h  render_pass.cpp  render_pass.h  render_pipeline.cpp  render_pipeline.h  render_resource.cpp  render_resource.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
source/runtime/function/render/debugdraw/: debug_draw.cpp  debug_draw.h  debug_draw_manager.cpp  debug_draw_manager.h  debug_draw_primitive.cpp  debug_draw_primitive.h
source/runtime/function/render/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_rhi.cpp  opengl_rhi.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
source/runtime/function/render/opengl/interface/: rhi.h  rhi_buffer.cpp  rhi_buffer.h  rhi_framebuffer.cpp  rhi_framebuffer.h  rhi_shader.cpp  rhi_shader.h  rhi_texture.cpp  rhi_texture.h
source/runtime/function/render/passes/: main_camera_pass.cpp  main_camera_pass.h  ui_pass.cpp  ui_pass.h
source/runtime/function/ui/: window_ui.cpp  window_ui.h
source/runtime/resource/: asset_manager.cpp  asset_manager.h  config_manager.cpp  config_manager.h
source/runtime/resource/res_type/common/: level.h  object.h  world.h
source/runtime/resource/res_type/components/: mesh.h
source/runtime/resource/res_type/data/: basic_shape.h  camera_config.h  material.h  mesh_data.h
source/runtime/resource/res_type/global/: global_particle.h  global_rendering.h
template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
